[project]
name = "yxmb-compatlib"
version = "0.1.0"
description = "支持原地升级的宇信慢病兼容库"
readme = "README.md"
authors = [
    { name = "Maple", email = "wjxa20152015@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ddddocr>=1.5.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pyinstaller>=6.14.2",
    "selenium>=4.34.2",
]

[project.scripts]
yxmb-compatlib = "yxmb_compatlib:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[project.entry-points."pyinstaller40"]
hook-dirs = "yxmb_compatlib._pyinstaller:get_hook_dirs"
